# hiring_code_exercise

./: CMakeLists.txt  README.md
include/: glwidget.hpp  logo.hpp  mainwindow.hpp  shape.hpp  uv_icosahedron.hpp  uv_sphere.hpp  window.hpp
src/: glwidget.cpp  logo.cpp  main.cpp  mainwindow.cpp  uv_icosahedron.cpp  uv_sphere.cpp  window.cpp
